tests/specs/test/check_local_by_default2/main.ts
import * as a from "http://localhost:4545/subdir/type_error.ts";

const b: "b" = 12;

console.log(a.a);
console.log(b);
